# reviewradar

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: experiment_small.yaml  train.yaml
data/: reviews_sample.csv
notebooks/: 01_first_model.ipynb
src/reviewradar/: __init__.py  laoder.py  models.py  stats.py  train.py
src/reviewradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
