[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewradar"
version="0.1.0"
description="feedback intelligence Platform - built live in 45 days"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "datasets",
    "joblib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

